--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <nav>
             <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
             <ul class="navigation-list">
-                <li class="navigation-list-item"><a href="">Studio</a></li>
-                <li class="navigation-list-item"><a href="">Portfolio</a></li>
-                <li class="navigation-list-item"><a href="">Contacts</a></li>
+                <li class="navigation-list-item"><a class="navigation-list-link" href="./index.html">Studio</a></li>
+                <li class="navigation-list-item"><a class="navigation-list-link" href="">Portfolio</a></li>
+                <li class="navigation-list-item"><a class="navigation-list-link" href="">Contacts</a></li>
             </ul>
         </nav>                                                                                              
-        <address>
+        <address class="adress">
             <ul class="adress-list">
-                <li class="adress-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="adress-list-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="adress-list-item"><a class="adress-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="adress-list-item"><a class="adress-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -34,24 +34,24 @@
             <button class="hero-button" type="button">Order Service</button>
         </section>
         <section class="advantages">
-        <h2>Our advantages</h2>
+        <h2 class="advantages-title">Our advantages</h2>
         <ul class="advantages-list">
             <li class="advantages-list-item">
                 <h3 class="advantages-subtitle">Strategy</h3>
-                <p>Our goal is to identify the business
+                <p class="advantages-text">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution. </p>
             </li>
             <li class="advantages-list-item">
                 <h3 class="advantages-subtitle">Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <p class="advantages-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li class="advantages-list-item">
                 <h3 class="advantages-subtitle">Diligence</h3>
-                <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                <p class="advantages-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="advantages-list-item">
                 <h3 class="advantages-subtitle">Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
         </section>
@@ -84,39 +84,39 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-title">
                 <li class="portfolio-list-item">
-                    <img src="./images/img(4)(1).jpg" alt="Banking App" width="264" height="260">
+                    <img src="./images/img41.jpg" alt="Banking App" width="264" height="260">
                     <h3 class="portfolio-subtitle">Banking App</h3>
                     <p class="portfolio-list-item-text">App</p>
                 </li>
                 <li class="portfolio-list-item">
-                    <img src="./images/img(5)(1).jpg" alt="Cashless Payment" width="264" height="260">
+                    <img src="./images/img51.jpg" alt="Cashless Payment" width="360">
                     <h3 class="portfolio-subtitle">Cashless Payment</h3>
                     <p class="portfolio-list-item-text">Marketing</p>
                 </li>
                 <li class="portfolio-list-item">
-                    <img src="./images/img(6)(1).jpg" alt="Meditation App" width="264" height="260">
+                    <img src="./images/img61.jpg" alt="Meditation App" width="360">
                     <h3 class="portfolio-subtitle">Meditation App</h3>
                     <p class="portfolio-list-item-text">App</p>
                 </li>
                 <li class="portfolio-list-item">
-                    <img src="./images/img(7)(1).jpg" alt="Taxi Service" width="264" height="260">
+                    <img src="./images/img71.jpg" alt="Taxi Service" width="360">
                     <h3 class="portfolio-subtitle">Taxi Service</h3>
                     <p class="portfolio-list-item-text">Marketing</p>
                 </li>
                 <li class="portfolio-list-item">
-                    <img src="./images/img(8)(1).jpg" alt="Screen Illustrations" width="264" height="260">
+                    <img src="./images/img81.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                     <p class="portfolio-list-item-text">Design</p>
                 </li>
                 <li class="portfolio-list-item">
-                    <img src="./images/img(10)(1).jpg" alt="Online Courses" width="264" height="260">
+                    <img src="./images/img101.jpg" alt="Online Courses" width="360">
                     <h3 class="portfolio-subtitle">Online Courses</h3>
                     <p class="portfolio-list-item-text">Marketing</p>
                 </li>
                 </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
             <a class="logo" href="./index.html">Web<span class="footer-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
