--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-title">
                 <li class="portfolio-list-item">
-                    <img src="./images/img41.jpg" alt="Banking App" width="264" height="260">
+                    <img src="./images/img41.jpg" alt="Banking App" width="360">
                     <h3 class="portfolio-subtitle">Banking App</h3>
                     <p class="portfolio-list-item-text">App</p>
                 </li>
