--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </section>
         <section class="portfolio">
             <h2 class="portfolio-title">Our Portfolio</h2>
-            <ul class="portfolio-title">
+            <ul class="portfolio-list">
                 <li class="portfolio-list-item">
                     <img src="./images/img41.jpg" alt="Banking App" width="360">
                     <h3 class="portfolio-subtitle">Banking App</h3>
